[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
bytemuck = "1.7"

[target.'cfg(target_family = "wasm")'.dependencies]
winit = {version="0.26"}
wasm-bindgen = "0.2"
web-sys = {version="0.3", features = ["Window"]}

[build-dependencies]
fs_extra = "1.2"
glob = "0.3"
